@@ -1,19 +1,26 @@
 /*
- *  Copyright 2006-2020 The MZmine Development Team
+ * Copyright (c) 2004-2022 The MZmine Development Team
  *
- *  This file is part of MZmine.
+ * Permission is hereby granted, free of charge, to any person
+ * obtaining a copy of this software and associated documentation
+ * files (the "Software"), to deal in the Software without
+ * restriction, including without limitation the rights to use,
+ * copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the
+ * Software is furnished to do so, subject to the following
+ * conditions:
  *
- *  MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
- *  General Public License as published by the Free Software Foundation; either version 2 of the
- *  License, or (at your option) any later version.
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
  *
- *  MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
- *  the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
- *  Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License along with MZmine; if not,
- *  write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
- *  USA
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+ * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+ * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+ * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+ * OTHER DEALINGS IN THE SOFTWARE.
  */
 
 package io.github.mzmine.util.scans;
@@ -23,23 +30,26 @@ import com.google.common.collect.Range;
 import com.google.common.collect.RangeMap;
 import com.google.common.collect.TreeRangeMap;
 import com.google.common.util.concurrent.AtomicDouble;
+import gnu.trove.list.array.TDoubleArrayList;
 import io.github.mzmine.datamodel.Frame;
 import io.github.mzmine.datamodel.IMSRawDataFile;
-import io.github.mzmine.datamodel.ImsMsMsInfo;
 import io.github.mzmine.datamodel.MassList;
 import io.github.mzmine.datamodel.MassSpectrum;
 import io.github.mzmine.datamodel.MassSpectrumType;
 import io.github.mzmine.datamodel.MergedMassSpectrum;
+import io.github.mzmine.datamodel.MergedMassSpectrum.MergingType;
 import io.github.mzmine.datamodel.MergedMsMsSpectrum;
 import io.github.mzmine.datamodel.MobilityScan;
 import io.github.mzmine.datamodel.PolarityType;
+import io.github.mzmine.datamodel.Scan;
 import io.github.mzmine.datamodel.featuredata.IonMobilogramTimeSeries;
 import io.github.mzmine.datamodel.features.ModularFeature;
 import io.github.mzmine.datamodel.impl.BuildingMobilityScan;
 import io.github.mzmine.datamodel.impl.SimpleFrame;
 import io.github.mzmine.datamodel.impl.SimpleMergedMassSpectrum;
 import io.github.mzmine.datamodel.impl.SimpleMergedMsMsSpectrum;
-import io.github.mzmine.datamodel.impl.masslist.ScanPointerMassList;
+import io.github.mzmine.datamodel.msms.MsMsInfo;
+import io.github.mzmine.datamodel.msms.PasefMsMsInfo;
 import io.github.mzmine.parameters.parametertypes.tolerances.MZTolerance;
 import io.github.mzmine.util.DataPointSorter;
 import io.github.mzmine.util.MemoryMapStorage;
@@ -56,22 +66,27 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
+import java.util.stream.Stream;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 /**
  * Utility methods to merge multiple spectra. Data points are sorted by intensity and grouped,
- * similar to ADAP chromatogram building {@link io.github.mzmine.modules.dataprocessing.featdet_adapchromatogrambuilder.ModularADAPChromatogramBuilderTask}.
+ * similar to ADAP chromatogram building
+ * {@link
+ * io.github.mzmine.modules.dataprocessing.featdet_adapchromatogrambuilder.ModularADAPChromatogramBuilderTask}.
  * Merging of data points from the same spectrum is prevented by indexing the data points prior to
  * sorting.
  *
  * @author https://github.com/SteffenHeu
  */
+@SuppressWarnings("UnstableApiUsage")
 public class SpectraMerging {
 
   public static final double EPSILON = 1E-15;
@@ -81,28 +96,40 @@ public class SpectraMerging {
   public static final CenterFunction DEFAULT_CENTER_FUNCTION = new CenterFunction(
       DEFAULT_CENTER_MEASURE, DEFAULT_WEIGHTING);
 
+  // for merging IMS-TOF MS1 scans ~Steffen
+  public static final MZTolerance defaultMs1MergeTol = new MZTolerance(0.005, 15);
+  // for merging IMS-TOF MS2 scans ~Steffen
+  public static final MZTolerance pasefMS2MergeTol = new MZTolerance(0.008, 25);
+
+  public static final MZTolerance defaultMs2MergeTol = new MZTolerance(0.008, 25);
+
   private static final DataPointSorter sorter = new DataPointSorter(SortingProperty.Intensity,
       SortingDirection.Descending);
-  private static Logger logger = Logger.getLogger(SpectraMerging.class.getName());
+  private static final Logger logger = Logger.getLogger(SpectraMerging.class.getName());
 
   /**
    * Calculates merged intensities and mz values of all data points in the given spectrum. Ideally,
    * {@link MassList}s should be used so noise is filtered out by the user.
    *
-   * @param source           The {@link MassSpectrum} source
-   * @param tolerance        m/z tolerance to merge peaks.
-   * @param mergingType      The way to calculate intensities (avg, sum, max)
-   * @param mzCenterFunction A function to center m/z values after merging.
-   * @param <T>              Any type of {@link MassSpectrum}
-   * @param noiseLevel       A noise level to use. May be null or 0 if no noise level shall be
-   *                         used.
+   * @param source               The {@link MassSpectrum} source
+   * @param tolerance            m/z tolerance to merge peaks.
+   * @param intensityMergingType The way to calculate intensities (avg, sum, max)
+   * @param mzCenterFunction     A function to center m/z values after merging.
+   * @param <T>                  Any type of {@link MassSpectrum}
+   * @param inputNoiseLevel      A noise level to use. May be null or 0 if no noise level shall be
+   *                             used.
+   * @param outputNoiseLevel     Minimum intensity to be achieved in the merged intensity. May be
+   *                             null or 0.
+   * @param minNumPeaks          Minimum number of times that a peak has to appear in one of the
+   *                             source spectra to make it to the final merged spectrum.
    * @return double[2][] array, [0][] being the mzs, [1] being the intensities. Empty double[2][0]
    * if the source collection is empty.
    */
   public static <T extends MassSpectrum> double[][] calculatedMergedMzsAndIntensities(
-      @Nonnull final Collection<T> source, @Nonnull final MZTolerance tolerance,
-      @Nonnull final MergingType mergingType, @Nonnull final CenterFunction mzCenterFunction,
-      @Nullable final Double noiseLevel) {
+      @NotNull final Collection<T> source, @NotNull final MZTolerance tolerance,
+      @NotNull final SpectraMerging.IntensityMergingType intensityMergingType,
+      @NotNull final CenterFunction mzCenterFunction, @Nullable final Double inputNoiseLevel,
+      @Nullable final Double outputNoiseLevel, @Nullable final Integer minNumPeaks) {
 
     if (source.isEmpty()) {
       return new double[][]{new double[0], new double[0]};
@@ -121,7 +148,7 @@ public class SpectraMerging {
       spectrum.getIntensityValues(rawIntensities);
 
       for (int i = 0; i < spectrum.getNumberOfDataPoints(); i++) {
-        if (noiseLevel == null || rawIntensities[i] > noiseLevel) {
+        if (inputNoiseLevel == null || rawIntensities[i] > inputNoiseLevel) {
           final IndexedDataPoint dp = new IndexedDataPoint(rawMzs[i], rawIntensities[i], index);
           dataPoints.add(dp);
         }
@@ -171,31 +198,35 @@ public class SpectraMerging {
       dplist.add(dp);
     }
 
-    int numDps = dataPointRanges.asMapOfRanges().size();
-    double[] newIntensities = new double[numDps];
-    double[] newMzs = new double[numDps];
-    int counter = 0;
+    final int numDps = dataPointRanges.asMapOfRanges().size();
+    final TDoubleArrayList newIntensities = new TDoubleArrayList(numDps);
+    final TDoubleArrayList newMzs = new TDoubleArrayList(numDps);
 
     // now we got everything in place and have to calculate the new intensities and mzs
-    for (Entry<Range<Double>, SortedSet<IndexedDataPoint>> entry : dataPointRanges
-        .asMapOfRanges().entrySet()) {
+    for (Entry<Range<Double>, SortedSet<IndexedDataPoint>> entry : dataPointRanges.asMapOfRanges()
+        .entrySet()) {
+      if (minNumPeaks != null && entry.getValue().size() < minNumPeaks) {
+        continue;
+      }
+
       double[] mzs = entry.getValue().stream().mapToDouble(IndexedDataPoint::getMZ).toArray();
       double[] intensities = entry.getValue().stream().mapToDouble(IndexedDataPoint::getIntensity)
           .toArray();
 
       double newMz = mzCenterFunction.calcCenter(mzs, intensities);
-      double newIntensity = switch (mergingType) {
+      double newIntensity = switch (intensityMergingType) {
         case SUMMED -> Arrays.stream(intensities).sum();
         case MAXIMUM -> Arrays.stream(intensities).max().orElse(0d);
         case AVERAGE -> Arrays.stream(intensities).average().orElse(0d);
       };
 
-      newMzs[counter] = newMz;
-      newIntensities[counter] = newIntensity;
-      counter++;
+      if (outputNoiseLevel == null || newIntensity > outputNoiseLevel) {
+        newMzs.add(newMz);
+        newIntensities.add(newIntensity);
+      }
     }
 
-    return new double[][]{newMzs, newIntensities};
+    return new double[][]{newMzs.toArray(), newIntensities.toArray()};
   }
 
   /**
@@ -257,36 +288,44 @@ public class SpectraMerging {
   }
 
   /**
-   * Creates a merged MS/MS spectrum for a PASEF {@link ImsMsMsInfo}.
+   * Creates a merged MS/MS spectrum for a PASEF {@link PasefMsMsInfo}.
    *
-   * @return A {@link MergedMsMsSpectrum}.
+   * @param info                     The MS/MS info to create a merged spectrum for
+   * @param tolerance                The m/z tolerence to merge peaks from separate mobility scans
+   *                                 with.
+   * @param intensityMergingType     The merging type. Usually {@link IntensityMergingType#SUMMED}.
+   * @param storage                  The storage to use or null.
+   * @param mobilityRange            If the MS/MS shall only be created for a specific mobility
+   *                                 range, e.g., in the case of isomeric features that have been
+   *                                 resolved.
+   * @param outputNoiseLevelAbs      Minimum intensity to be achieved in the merged intensity. May
+   *                                 be null or 0.
+   * @param outputNoiseLevelRelative minimum relative intensity in the merged spectrum may be null.
+   * @return A {@link MergedMsMsSpectrum} or null the spectrum would not have any data points.
    */
-  public static MergedMsMsSpectrum getMergedMsMsSpectrumForPASEF(@Nonnull final ImsMsMsInfo info,
-      @Nonnull final MZTolerance tolerance, @Nonnull final MergingType mergingType,
-      @Nullable final MemoryMapStorage storage) {
-
-    if (info == null) {
-      return null;
-    }
+  @Nullable
+  public static MergedMsMsSpectrum getMergedMsMsSpectrumForPASEF(@NotNull final PasefMsMsInfo info,
+      @NotNull final MZTolerance tolerance,
+      @NotNull final SpectraMerging.IntensityMergingType intensityMergingType,
+      @Nullable final MemoryMapStorage storage, @Nullable Range<Float> mobilityRange,
+      @Nullable final Double outputNoiseLevelAbs, @Nullable Double outputNoiseLevelRelative,
+      @Nullable final Integer minNumPeaks) {
 
     final Range<Integer> spectraNumbers = info.getSpectrumNumberRange();
-    final Frame frame = info.getFrameNumber();
-    final float collisionEnergy = info.getCollisionEnergy();
-    final double precursorMz = info.getLargestPeakMz();
+    final Frame frame = info.getMsMsFrame();
 
-    List<MobilityScan> mobilityScans = frame.getMobilityScans().stream()
-        .filter(ms -> spectraNumbers.contains(ms.getMobilityScanNumber())).collect(
-            Collectors.toList());
+    List<MobilityScan> mobilityScans = frame.getMobilityScans().stream().filter(
+        ms -> spectraNumbers.contains(ms.getMobilityScanNumber()) && (mobilityRange == null
+            || mobilityRange.contains((float) ms.getMobility()))).collect(Collectors.toList());
 
     if (mobilityScans.isEmpty()) {
       return null;
     }
 
-    final CenterFunction cf = new CenterFunction(CenterMeasure.AVG,
-        CenterFunction.DEFAULT_MZ_WEIGHTING);
+    final CenterFunction cf = DEFAULT_CENTER_FUNCTION;
 
     final List<MassList> massLists = mobilityScans.stream().map(MobilityScan::getMassList)
-        .collect(Collectors.toList());
+        .filter(Objects::nonNull).collect(Collectors.toList());
 
     if (massLists.isEmpty()) {
       logger.info(
@@ -295,56 +334,96 @@ public class SpectraMerging {
     }
 
     double[][] merged = calculatedMergedMzsAndIntensities(massLists, tolerance,
-        mergingType, cf, null);
+        intensityMergingType, cf, null, outputNoiseLevelAbs, minNumPeaks);
 
-    MergedMsMsSpectrum mergedSpectrum = new SimpleMergedMsMsSpectrum(storage, merged[0],
-        merged[1], precursorMz, info.getPrecursorCharge(), collisionEnergy, frame.getMSLevel(),
-        mobilityScans, mergingType, cf);
+    if (merged[0].length == 0) {
+      return null;
+    }
 
-    return mergedSpectrum;
+    if (outputNoiseLevelRelative != null) {
+      double minRelative = Arrays.stream(merged[1]).max().orElse(0d) * outputNoiseLevelRelative;
+      if (outputNoiseLevelAbs == null || (minRelative > outputNoiseLevelAbs)) {
+        // if the min relative intensity is smaller than the absolute, we don't need to recalc here
+        merged = calculatedMergedMzsAndIntensities(massLists, tolerance, intensityMergingType, cf,
+            null, minRelative, minNumPeaks);
+      }
+    }
+
+    final MsMsInfo copy = info.createCopy();
+    copy.setMsMsScan(frame);
+    return new SimpleMergedMsMsSpectrum(storage, merged[0], merged[1], copy, frame.getMSLevel(),
+        mobilityScans, intensityMergingType, cf, MergingType.ALL);
   }
 
   /**
    * Merges Multiple MS/MS spectra with the same collision energy into a single MS/MS spectrum.
    *
-   * @param spectra     The source spectra
-   * @param tolerance   The mz tolerance to merch peaks in a spectrum
-   * @param mergingType Specifies the way to treat intensities (sum, avg, max)
-   * @param storage     The storage to use.
+   * @param spectra              The source spectra, may be of multiple collision energies.
+   * @param tolerance            The mz tolerance to merch peaks in a spectrum
+   * @param intensityMergingType Specifies the way to treat intensities (sum, avg, max)
+   * @param storage              The storage to use.
    * @return A list of all merged spectra (Spectra with the same collision energy have been merged).
    */
-  public static List<MergedMsMsSpectrum> mergeMsMsSpectra(
-      @Nonnull final Collection<MergedMsMsSpectrum> spectra,
-      @Nonnull final MZTolerance tolerance, @Nonnull final MergingType mergingType,
+  public static List<Scan> mergeMsMsSpectra(@NotNull final Collection<Scan> spectra,
+      @NotNull final MZTolerance tolerance,
+      @NotNull final SpectraMerging.IntensityMergingType intensityMergingType,
       @Nullable final MemoryMapStorage storage) {
 
     final CenterFunction cf = new CenterFunction(CenterMeasure.AVG, Weighting.LINEAR);
 
-    final List<MergedMsMsSpectrum> mergedSpectra = new ArrayList<>();
+    final List<Scan> mergedSpectra = new ArrayList<>();
     // group spectra with the same CE into the same list
-    final Map<Float, List<MergedMsMsSpectrum>> grouped = spectra.stream()
-        .collect(Collectors.groupingBy(spectrum -> spectrum.getCollisionEnergy()));
+    final Map<Float, List<Scan>> grouped = spectra.stream()
+        .collect(Collectors.groupingBy(SpectraMerging::getCollisionEnergy));
 
-    for (final Entry<Float, List<MergedMsMsSpectrum>> entry : grouped.entrySet()) {
-      final MergedMsMsSpectrum spectrum = entry.getValue().get(0);
+    for (final Entry<Float, List<Scan>> entry : grouped.entrySet()) {
+      final Scan spectrum = entry.getValue().get(0);
       final double[][] mzIntensities = calculatedMergedMzsAndIntensities(entry.getValue(),
-          tolerance, mergingType, cf, null);
-      final List<MassSpectrum> sourceSpectra = entry.getValue().stream()
-          .flatMap(s -> s.getSourceSpectra().stream()).collect(Collectors.toList());
+          tolerance, intensityMergingType, cf, null, null, null);
+
+      if (mzIntensities[0].length == 0) {
+        continue;
+      }
+
+      final List<MassSpectrum> sourceSpectra = entry.getValue().stream().flatMap(s -> {
+        if (s instanceof MergedMassSpectrum spec) {
+          return spec.getSourceSpectra().stream();
+        } else {
+          return Stream.of(s);
+        }
+      }).collect(Collectors.toList());
 
       final MergedMsMsSpectrum mergedMsMsSpectrum = new SimpleMergedMsMsSpectrum(storage,
-          mzIntensities[0], mzIntensities[1],
-          spectrum.getPrecursorMZ(), spectrum.getPrecursorCharge(), spectrum.getCollisionEnergy(),
-          spectrum.getMSLevel(), sourceSpectra, mergingType, cf);
+          mzIntensities[0], mzIntensities[1], spectrum.getMsMsInfo(), spectrum.getMSLevel(),
+          sourceSpectra, intensityMergingType, cf, MergingType.ALL);
       mergedSpectra.add(mergedMsMsSpectrum);
     }
 
     return mergedSpectra;
   }
 
-  public static MergedMassSpectrum extractSummedMobilityScan(@Nonnull final ModularFeature f,
-      @Nonnull final MZTolerance tolerance, @Nonnull final Range<Float> mobilityRange,
+  private static Float getCollisionEnergy(final Scan spec) {
+    if (spec instanceof MergedMsMsSpectrum merged) {
+      return merged.getCollisionEnergy();
+    }
+    MsMsInfo info = spec.getMsMsInfo();
+    if (info != null) {
+      return info.getActivationEnergy();
+    }
+    return null;
+  }
+
+  @Nullable
+  public static MergedMassSpectrum extractSummedMobilityScan(@NotNull final ModularFeature f,
+      @NotNull final MZTolerance tolerance, @NotNull final Range<Float> mobilityRange,
       @Nullable final MemoryMapStorage storage) {
+    return extractSummedMobilityScan(f, tolerance, mobilityRange, Range.all(), storage);
+  }
+
+  @Nullable
+  public static MergedMassSpectrum extractSummedMobilityScan(@NotNull final ModularFeature f,
+      @NotNull final MZTolerance tolerance, @NotNull final Range<Float> mobilityRange,
+      @NotNull final Range<Float> rtRange, @Nullable final MemoryMapStorage storage) {
     if (!(f.getFeatureData() instanceof IonMobilogramTimeSeries series)) {
       return null;
     }
@@ -352,26 +431,74 @@ public class SpectraMerging {
     final List<MobilityScan> scans = series.getMobilograms().stream()
         .<MobilityScan>mapMulti((s, c) -> {
           for (var spectrum : s.getSpectra()) {
-            if (mobilityRange.contains((float) spectrum.getMobility())) {
+            if (mobilityRange.contains((float) spectrum.getMobility()) && rtRange.contains(
+                spectrum.getRetentionTime())) {
               c.accept(spectrum);
             }
           }
         }).toList();
 
-    final double merged[][] = calculatedMergedMzsAndIntensities(scans, tolerance,
-        MergingType.SUMMED, DEFAULT_CENTER_FUNCTION, null);
+    // todo use mass lists over raw scans to merge (separate PR)
 
-    var scan = new SimpleMergedMassSpectrum(storage, merged[0], merged[1], 1, scans, MergingType.SUMMED,
-        DEFAULT_CENTER_FUNCTION);
-    scan.addMassList(new ScanPointerMassList(scan));
+    final double[][] merged = calculatedMergedMzsAndIntensities(scans, tolerance,
+        IntensityMergingType.SUMMED, DEFAULT_CENTER_FUNCTION, null, null, null);
 
-    return scan;
+    return new SimpleMergedMassSpectrum(storage, merged[0], merged[1], 1, scans,
+        IntensityMergingType.SUMMED, DEFAULT_CENTER_FUNCTION, MergingType.ALL);
   }
 
-  public static Frame getMergedFrame(@Nonnull final Collection<Frame> frames,
-      @Nonnull final MZTolerance tolerance,
-      @Nullable final MemoryMapStorage storage, final int mobilityScanBin,
-      @Nonnull final AtomicDouble progress) {
+  /**
+   * @return A summed spectrum with the given tolerances.
+   */
+  public static <T extends MassSpectrum> MergedMassSpectrum mergeSpectra(
+      final @NotNull List<T> source, @NotNull final MZTolerance tolerance,
+      final MergingType mergeType, @Nullable final MemoryMapStorage storage) {
+    return mergeSpectra(source, tolerance, IntensityMergingType.SUMMED, mergeType,
+        DEFAULT_CENTER_FUNCTION, storage);
+  }
+
+  public static <T extends MassSpectrum> MergedMassSpectrum mergeSpectra(
+      final @NotNull List<T> source, @NotNull final MZTolerance tolerance,
+      final MergingType mergeType, final IntensityMergingType intensityMergeType,
+      @Nullable final MemoryMapStorage storage) {
+    return mergeSpectra(source, tolerance, intensityMergeType, mergeType, DEFAULT_CENTER_FUNCTION,
+        storage);
+  }
+
+  public static <T extends MassSpectrum> MergedMassSpectrum mergeSpectra(
+      final @NotNull List<T> source, @NotNull final MZTolerance tolerance,
+      IntensityMergingType intensityMergingType, MergingType mergeType,
+      final CenterFunction centerFunction, @Nullable final MemoryMapStorage storage) {
+
+    return mergeSpectra(source, tolerance, intensityMergingType, mergeType, null, null, null,
+        centerFunction, storage);
+  }
+
+  public static <T extends MassSpectrum> MergedMassSpectrum mergeSpectra(
+      final @NotNull List<T> source, @NotNull final MZTolerance tolerance,
+      IntensityMergingType intensityMergingType, MergingType mergeType,
+      @Nullable Double inputNoiseLevel, @Nullable Double outputNoiseLevel,
+      @Nullable Integer minNumPeaks, CenterFunction centerFunction,
+      @Nullable final MemoryMapStorage storage) {
+
+    // if we have mass lists, use them to merge.
+    final List<? extends MassSpectrum> spectra = source.stream()
+        .map(s -> s instanceof Scan scan ? scan.getMassList() : s).toList();
+
+    final double[][] mzIntensities = calculatedMergedMzsAndIntensities(spectra, tolerance,
+        intensityMergingType, centerFunction, inputNoiseLevel, outputNoiseLevel, minNumPeaks);
+    final int msLevel = source.stream().filter(s -> s instanceof Scan)
+        .mapToInt(s -> ((Scan) s).getMSLevel()).min().orElse(1);
+
+    return new SimpleMergedMassSpectrum(storage, mzIntensities[0], mzIntensities[1], msLevel,
+        source, intensityMergingType, centerFunction, mergeType);
+  }
+
+  public static Frame getMergedFrame(@Nullable final MemoryMapStorage storage,
+      @NotNull final MZTolerance tolerance, @NotNull final Collection<Frame> frames,
+      final int mobilityScanBin, @NotNull final IntensityMergingType intensityMergingType,
+      @Nullable final Double inputNoiseLevel, @Nullable final Double outputNoiseLevelAbs,
+      @Nullable final Integer minMobilityPeaks, @NotNull final AtomicDouble progress) {
     if (frames.isEmpty()) {
       throw new IllegalStateException("No frames in collection to be merged.");
     }
@@ -388,8 +515,7 @@ public class SpectraMerging {
     for (final Frame frame : frames) {
       for (final MobilityScan mobilityScan : frame.getMobilityScans()) {
         final List<MobilityScan> mobilityScans = scanMap.computeIfAbsent(
-            mobilityScan.getMobilityScanNumber() / mobilityScanBin,
-            i -> new ArrayList<>());
+            mobilityScan.getMobilityScanNumber() / mobilityScanBin, i -> new ArrayList<>());
         mobilityScans.add(mobilityScan);
       }
 
@@ -399,8 +525,8 @@ public class SpectraMerging {
       if (frame.getRetentionTime() > highestRt) {
         highestRt = frame.getRetentionTime();
       }
-      if (!scanMzRange.equals(frame.getScanningMZRange()) && !scanMzRange
-          .encloses(frame.getScanningMZRange())) {
+      if (!scanMzRange.equals(frame.getScanningMZRange()) && !scanMzRange.encloses(
+          frame.getScanningMZRange())) {
         scanMzRange = scanMzRange.span(frame.getScanningMZRange());
       }
 
@@ -416,9 +542,10 @@ public class SpectraMerging {
         CenterFunction.DEFAULT_MZ_WEIGHTING);
     final IMSRawDataFile file = (IMSRawDataFile) frames.stream().findAny().get().getDataFile();
 
-    final SimpleFrame frame = new SimpleFrame(file, -1, msLevel, (highestRt + lowestRt) / 2, 0d, 0,
-        null, null, MassSpectrumType.CENTROIDED, polarityType,
-        "Merged frame (" + frames.stream() + ")", scanMzRange, aFrame.getMobilityType(), null);
+    final SimpleFrame frame = new SimpleFrame(file, -1, msLevel, (highestRt + lowestRt) / 2, null,
+        null, MassSpectrumType.CENTROIDED, polarityType,
+        String.format("Merged frame (%.2f-%.2f)", lowestRt, highestRt), scanMzRange,
+        aFrame.getMobilityType(), null, null);
 
     final AtomicInteger processed = new AtomicInteger(0);
     final double totalFrames = scanMap.size();
@@ -426,21 +553,27 @@ public class SpectraMerging {
     // create a merged spectrum for each mobility scan bin
     final List<BuildingMobilityScan> buildingMobilityScans = scanMap.entrySet().parallelStream()
         .map(entry -> {
+          final List<? extends MassSpectrum> spectra;
+
           final List<MassList> massLists = entry.getValue().stream().map(MobilityScan::getMassList)
-              .collect(Collectors.toList());
-          if (massLists.size() != entry.getValue().size()) {
-            throw new IllegalArgumentException(
-                "Not all mobility scans contain a mass list. Cannot merge Frames.");
+              .filter(Objects::nonNull).toList();
+          if (massLists.isEmpty()) {
+            spectra = entry.getValue();
+          } else {
+            if (massLists.size() != entry.getValue().size()) {
+              throw new IllegalArgumentException(
+                  "Not all mobility scans contain a mass list. Cannot merge Frames.");
+            }
+            spectra = massLists;
           }
-          double[][] mzIntensities = calculatedMergedMzsAndIntensities(massLists, tolerance,
-              MergingType.SUMMED, cf, null);
+          final double[][] mzIntensities = calculatedMergedMzsAndIntensities(spectra, tolerance,
+              intensityMergingType, cf, inputNoiseLevel, outputNoiseLevelAbs, minMobilityPeaks);
 
           processed.getAndIncrement();
           progress.set(processed.get() / totalFrames);
 
           return new BuildingMobilityScan(entry.getKey(), mzIntensities[0], mzIntensities[1]);
-        }).sorted(Comparator.comparingInt(BuildingMobilityScan::getMobilityScanNumber))
-        .collect(Collectors.toList());
+        }).sorted(Comparator.comparingInt(BuildingMobilityScan::getMobilityScanNumber)).toList();
 
     final double[] mobilities = new double[scanMap.size()];
     int i = 0;
@@ -450,15 +583,26 @@ public class SpectraMerging {
       i++;
     }
 
-    frame.setMobilityScans(buildingMobilityScans);
+    frame.setMobilityScans(buildingMobilityScans, true);
     frame.setMobilities(mobilities);
-    double[][] mergedSpectrum = calculatedMergedMzsAndIntensities(buildingMobilityScans,
-        tolerance, MergingType.SUMMED, cf, null);
+    double[][] mergedSpectrum = calculatedMergedMzsAndIntensities(buildingMobilityScans, tolerance,
+        intensityMergingType, cf, null, null, null);
     frame.setDataPoints(mergedSpectrum[0], mergedSpectrum[1]);
     return frame;
   }
 
-  public enum MergingType {
-    SUMMED, MAXIMUM, AVERAGE
+  public enum IntensityMergingType {
+    SUMMED("Summed"), MAXIMUM("Maximum value"), AVERAGE("Average value");
+
+    private final String label;
+
+    @Override
+    public String toString() {
+      return this.label;
+    }
+
+    IntensityMergingType(String label) {
+      this.label = label;
+    }
   }
 }
